test/good/04-print.mac


int main() {
    print << "Is there an answer?\n" << true << "\n";
    print << "The answer is " << 40 + 2 << "\n";
    return 0; 
}