test/bad/12-and-or.mac



int main() {
    if(true && 5) {
        return 0;
    }
    return 0;
}